service.yml
apiVersion: v1
kind: Service
metadata:
  name: firefox-service
  namespace: development
spec:
  ports:
    - name: http
      port: 8081
  type: LoadBalancer    
  selector:
    apps: firefox-app
