services.yml
apiVersion: v1
kind: Service
metadata:
  name: static-service
  labels:
    run: static-service
#  namespace: development
spec:
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30300
      protocol: TCP
      name: http
    - port: 443
      nodePort: 30301
      protocol: TCP
      name: https
  type: LoadBalancer    
  selector:
    app: static-app
