ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress
spec:
  rules:
    - host: staticapp.com
      http:
        paths:
          - backend:
              serviceName: static-app
              servicePort: 80
